add security. add RegistrationController and UserRepository

--- a/src/main/resources/templates/registration.mustache
+++ b/src/main/resources/templates/registration.mustache
@@ -4,15 +4,18 @@
     <title>Spring Security</title>
 </head>
 <body>
-<h2>Login page</h2>
+<h2>Add new user</h2>
 <br>
-<form action="/login" method="post">
+
+{{#message}}
+    {{message}}
+{{/message}}
+
+<form action="/registration" method="post">
     <div><label> User Name: <input type="text" name="username"/> </label></div>
     <div><label> Password: <input type="text" name="password"/></label></div>
     <input type="hidden" name="_csrf" value="{{_csrf.token}}">
     <div><input type="submit" value="Sign In"/></div>
 </form>
-<br>
-<a href="/registration">Add new user</a>
 </body>
 </html>
